2003-05-14  Morten Welinder  <terra@gnome.org>

	* src/stf-export.h (StfExportOptions_t): Make quoting_char and
	cell_separator gunichars.

	* src/stf-export.c (stf_export_options_set_quoting_char,
	stf_export_options_set_cell_separator): Ditto.
	(stf_export_cell): Handle gunichar quoting.

2003-05-13  Jody Goldberg <jody@gnome.org>

	* schemas/gnumeric-general.schemas.in : Sans 10 is the default font

2003-05-13  Morten Welinder  <terra@gnome.org>

	* src/stf.c (stf_read_workbook): Set an error message so cancels
	won't cause blank books.

	* src/mathfunc.c (random_binomial): Use qbinom for sane time
	consumption.
	(random_negbinom): Use qnbinom for sane time consumption.

2003-05-13  Jody Goldberg <jody@gnome.org>

	* src/gui-file.c (gui_file_open) : add mnemonics for the type and
	  encoding selector.
	(file_format_changed_cb) : desensitize the label as well as the menu.

2003-05-13  Jody Goldberg <jody@gnome.org>

	* src/pattern.c (gnumeric_pattern_get_stipple) : fence post.

2003-05-13  Morten Welinder  <terra@gnome.org>

	* src/stf-parse.c (trim_spaces_inplace): Make UTF-8 safe.

2003-05-12  Morten Welinder  <terra@gnome.org>

	* src/stf.c (stf_open_and_read): Fix crash on errors and empty
	files.  Fix return value for empty files.

	* src/xml-io.c (gnumeric_xml_write_workbook): Fix broken object
	handling.

2003-05-12  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/stf-parse.c (compare_terminator) : return the byte 
	  length of the used terminator
	(stf_parse_paresoptions_new): initialize the string indicator
	  to our default
	(stf_parse_next_token): pass all parse options, check also for 
	  separators and terminators
	(stf_parse_options_csv_set_stringindicator): the string 
	  indicator could be a non-ascii character
	(stf_parse_csv_cell): use the type information returned by 
	  stf_parse_next_token
	(stf_parse_eat_separators): Don't eat null bytes.
	(stf_parse_get_rowcount): use stf_parse_next_token to avoid
	  counting in-string newlines